Merge SQLIntegrationTestCase into IntegTestCase
Pretty much every integration test uses SQL