@@ -21,6 +21,7 @@
 
 package org.elasticsearch.test;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_AUTO_EXPAND_REPLICAS;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_REPLICAS;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_SHARDS;
@@ -45,11 +46,15 @@ import static org.junit.Assert.fail;
 
 import java.io.IOException;
 import java.lang.annotation.Annotation;
+import java.lang.annotation.Documented;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Inherited;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.net.InetSocketAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -62,16 +67,21 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Random;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.Callable;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.function.BooleanSupplier;
 
 import javax.annotation.Nullable;
 
+import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.tests.util.CrateLuceneTestCase;
 import org.elasticsearch.ElasticsearchException;
+import org.elasticsearch.ElasticsearchTimeoutException;
 import org.elasticsearch.action.admin.cluster.health.ClusterHealthRequest;
 import org.elasticsearch.action.admin.cluster.health.ClusterHealthResponse;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateRequest;
@@ -100,51 +110,118 @@ import org.elasticsearch.cluster.routing.allocation.DiskThresholdSettings;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.CheckedRunnable;
 import org.elasticsearch.common.Priority;
+import org.elasticsearch.common.Randomness;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.inject.ConfigurationException;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.network.NetworkModule;
 import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.transport.BoundTransportAddress;
 import org.elasticsearch.common.unit.ByteSizeUnit;
 import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.common.util.concurrent.FutureUtils;
 import org.elasticsearch.common.xcontent.NamedXContentRegistry;
+import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.common.xcontent.XContentFactory;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.env.TestEnvironment;
+import org.elasticsearch.http.HttpTransportSettings;
+import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexModule;
+import org.elasticsearch.index.IndexService;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.MergePolicyConfig;
 import org.elasticsearch.index.MergeSchedulerConfig;
 import org.elasticsearch.index.MockEngineFactoryPlugin;
 import org.elasticsearch.index.codec.CodecService;
 import org.elasticsearch.index.mapper.MockFieldFilterPlugin;
+import org.elasticsearch.index.shard.IndexShard;
 import org.elasticsearch.index.translog.Translog;
 import org.elasticsearch.indices.IndicesQueryCache;
+import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.indices.store.IndicesStore;
 import org.elasticsearch.node.NodeMocksPlugin;
 import org.elasticsearch.plugins.Plugin;
+import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.test.disruption.NetworkDisruption;
 import org.elasticsearch.test.disruption.ServiceDisruptionScheme;
 import org.elasticsearch.test.store.MockFSIndexStore;
+import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.Netty4Plugin;
 import org.hamcrest.Matchers;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.Rule;
+import org.junit.rules.TestName;
+import org.junit.rules.Timeout;
 
 import com.carrotsearch.randomizedtesting.RandomizedContext;
+import com.carrotsearch.randomizedtesting.annotations.Listeners;
+import com.carrotsearch.randomizedtesting.annotations.TestGroup;
 import com.carrotsearch.randomizedtesting.generators.RandomNumbers;
 import com.carrotsearch.randomizedtesting.generators.RandomPicks;
+import com.carrotsearch.randomizedtesting.generators.RandomStrings;
 
+import io.crate.Constants;
+import io.crate.action.sql.SQLOperations;
+import io.crate.action.sql.Session;
+import io.crate.analyze.Analyzer;
+import io.crate.analyze.ParamTypeHints;
 import io.crate.common.collections.Lists2;
 import io.crate.common.io.IOUtils;
 import io.crate.common.unit.TimeValue;
+import io.crate.data.Paging;
+import io.crate.data.Row;
 import io.crate.exceptions.Exceptions;
 import io.crate.exceptions.SQLExceptions;
+import io.crate.execution.dml.TransportShardAction;
+import io.crate.execution.dml.delete.TransportShardDeleteAction;
+import io.crate.execution.dml.upsert.TransportShardUpsertAction;
+import io.crate.execution.engine.collect.stats.JobsLogService;
+import io.crate.execution.engine.collect.stats.JobsLogs;
+import io.crate.execution.jobs.NodeLimits;
+import io.crate.execution.jobs.RootTask;
+import io.crate.execution.jobs.TasksService;
+import io.crate.execution.jobs.kill.KillableCallable;
+import io.crate.expression.symbol.Literal;
+import io.crate.expression.symbol.Symbol;
+import io.crate.expression.symbol.Symbols;
+import io.crate.metadata.ColumnIdent;
+import io.crate.metadata.CoordinatorTxnCtx;
+import io.crate.metadata.FunctionImplementation;
+import io.crate.metadata.Functions;
+import io.crate.metadata.NodeContext;
+import io.crate.metadata.RelationName;
+import io.crate.metadata.RoutingProvider;
+import io.crate.metadata.Schemas;
+import io.crate.metadata.SearchPath;
+import io.crate.metadata.settings.CoordinatorSessionSettings;
+import io.crate.metadata.settings.SessionSettings;
+import io.crate.metadata.table.TableInfo;
+import io.crate.planner.DependencyCarrier;
+import io.crate.planner.Plan;
+import io.crate.planner.Planner;
+import io.crate.planner.PlannerContext;
+import io.crate.planner.operators.SubQueryResults;
+import io.crate.protocols.postgres.PostgresNetty;
+import io.crate.sql.Identifiers;
+import io.crate.sql.parser.SqlParser;
+import io.crate.test.integration.SystemPropsTestLoggingListener;
+import io.crate.testing.SQLResponse;
 import io.crate.testing.SQLTransportExecutor;
+import io.crate.testing.TestExecutionConfig;
+import io.crate.testing.TestingRowConsumer;
+import io.crate.testing.UseHashJoins;
+import io.crate.testing.UseJdbc;
+import io.crate.testing.UseRandomizedSchema;
+import io.crate.types.DataType;
+import io.crate.user.User;
+import io.crate.user.UserLookup;
 
 /**
  * {@link IntegTestCase} is an abstract base class to run integration
@@ -192,7 +269,19 @@ import io.crate.testing.SQLTransportExecutor;
  * </ul>
  */
 @CrateLuceneTestCase.SuppressFileSystems("ExtrasFS") // doesn't work with potential multi data path from test cluster yet
+@Listeners({SystemPropsTestLoggingListener.class})
+@UseJdbc
+@UseHashJoins
+@UseRandomizedSchema
 public abstract class IntegTestCase extends ESTestCase {
+
+    private static final Logger LOGGER = LogManager.getLogger(IntegTestCase.class);
+
+    private static final int ORIGINAL_PAGE_SIZE = Paging.PAGE_SIZE;
+
+    protected static SessionSettings DUMMY_SESSION_INFO = new SessionSettings(
+        "dummyUser",
+        SearchPath.createSearchPathFrom("dummySchema"));
 
     /** node names of the corresponding clusters will start with these prefixes */
     public static final String SUITE_CLUSTER_NODE_PREFIX = "node_s";
@@ -235,8 +324,17 @@ public abstract class IntegTestCase extends ESTestCase {
 
     private static final Map<Class<?>, TestCluster> clusters = new IdentityHashMap<>();
 
+    public static final String RUN_SLOW_TESTS_PROP = "tests.crate.slow";
     private static IntegTestCase INSTANCE = null; // see @SuiteScope
     private static Long SUITE_SEED = null;
+
+    @Rule
+    public Timeout globalTimeout = new Timeout(5, TimeUnit.MINUTES);
+
+    @Rule
+    public TestName testName = new TestName();
+
+    protected final SQLTransportExecutor sqlExecutor;
 
     @BeforeClass
     public static void beforeClass() throws Exception {
@@ -1114,7 +1212,12 @@ public abstract class IntegTestCase extends ESTestCase {
             // wait short time for other active shards before actually deleting, default 30s not needed in tests
             .put(IndicesStore.INDICES_STORE_DELETE_SHARD_TIMEOUT.getKey(), new TimeValue(1, TimeUnit.SECONDS))
             .putList(DISCOVERY_SEED_HOSTS_SETTING.getKey()) // empty list disables a port scan for other nodes
-            .putList(DISCOVERY_SEED_PROVIDERS_SETTING.getKey(), "file");
+            .putList(DISCOVERY_SEED_PROVIDERS_SETTING.getKey(), "file")
+            .put(HttpTransportSettings.SETTING_HTTP_COMPRESSION.getKey(), false)
+            .put(PostgresNetty.PSQL_PORT_SETTING.getKey(), 0);
+        if (randomBoolean()) {
+            builder.put("memory.allocation.type", "off-heap");
+        }
 
         return builder.build();
     }
@@ -1127,7 +1230,7 @@ public abstract class IntegTestCase extends ESTestCase {
      * Returns a collection of plugins that should be loaded on each node.
      */
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Collections.emptyList();
+        return List.of(Netty4Plugin.class);
     }
 
     protected TestCluster buildTestCluster(Scope scope, long seed) {
@@ -1395,5 +1498,686 @@ public abstract class IntegTestCase extends ESTestCase {
     @Inherited
     @Target(ElementType.TYPE)
     public @interface SuiteScopeTestCase {
+    }
+
+
+    /**
+     * Annotation for tests that are slow. Slow tests do not run by default but can be
+     * enabled.
+     */
+    @Documented
+    @Inherited
+    @Retention(RetentionPolicy.RUNTIME)
+    @TestGroup(enabled = false, sysProperty = RUN_SLOW_TESTS_PROP)
+    public @interface Slow {}
+
+    protected SQLResponse response;
+
+    public IntegTestCase() {
+        this(false);
+    }
+
+    public IntegTestCase(boolean useSSL) {
+        this(new SQLTransportExecutor(
+            new SQLTransportExecutor.ClientProvider() {
+                @Override
+                public Client client() {
+                    return IntegTestCase.client();
+                }
+
+                @Override
+                public String pgUrl() {
+                    PostgresNetty postgresNetty = internalCluster().getInstance(PostgresNetty.class);
+                    BoundTransportAddress boundTransportAddress = postgresNetty.boundAddress();
+                    if (boundTransportAddress != null) {
+                        InetSocketAddress address = boundTransportAddress.publishAddress().address();
+                        return String.format(Locale.ENGLISH, "jdbc:postgresql://%s:%d/?ssl=%s&sslmode=%s",
+                            address.getHostName(), address.getPort(), useSSL, useSSL ? "require" : "disable");
+                    }
+                    return null;
+                }
+
+                @Override
+                public SQLOperations sqlOperations() {
+                    return internalCluster().getInstance(SQLOperations.class);
+                }
+            }));
+    }
+
+    public static SQLTransportExecutor executor(String nodeName) {
+        return executor(nodeName, false);
+    }
+
+    public static SQLTransportExecutor executor(String nodeName, boolean useSSL) {
+        return new SQLTransportExecutor(
+            new SQLTransportExecutor.ClientProvider() {
+                @Override
+                public Client client() {
+                    return IntegTestCase.client(nodeName);
+                }
+
+                @Override
+                public String pgUrl() {
+                    PostgresNetty postgresNetty = internalCluster().getInstance(PostgresNetty.class, nodeName);
+                    BoundTransportAddress boundTransportAddress = postgresNetty.boundAddress();
+                    if (boundTransportAddress != null) {
+                        InetSocketAddress address = boundTransportAddress.publishAddress().address();
+                        return String.format(Locale.ENGLISH, "jdbc:postgresql://%s:%d/?ssl=%s&sslmode=%s",
+                                             address.getHostName(), address.getPort(), useSSL, useSSL ? "require" : "disable");
+                    }
+                    return null;
+                }
+
+                @Override
+                public SQLOperations sqlOperations() {
+                    return internalCluster().getInstance(SQLOperations.class);
+                }
+            });
+    }
+
+    public String getFqn(String schema, String tableName) {
+        if (schema.equals(Schemas.DOC_SCHEMA_NAME)) {
+            return tableName;
+        }
+        return String.format(Locale.ENGLISH, "%s.%s", schema, tableName);
+    }
+
+    public String getFqn(String tableName) {
+        return getFqn(sqlExecutor.getCurrentSchema(), tableName);
+    }
+
+    @Before
+    public void setSearchPath() throws Exception {
+        sqlExecutor.setSearchPath(randomizedSchema());
+    }
+
+    @After
+    public void resetPageSize() {
+        Paging.PAGE_SIZE = ORIGINAL_PAGE_SIZE;
+    }
+
+    public IntegTestCase(SQLTransportExecutor sqlExecutor) {
+        this.sqlExecutor = sqlExecutor;
+    }
+
+    @After
+    public void assertNoTasksAreLeftOpen() throws Exception {
+        final Field activeTasks = TasksService.class.getDeclaredField("activeTasks");
+        final Field activeOperationsSb = TransportShardAction.class.getDeclaredField("activeOperations");
+
+        activeTasks.setAccessible(true);
+        activeOperationsSb.setAccessible(true);
+        try {
+            assertBusy(() -> {
+                for (TasksService tasksService : internalCluster().getInstances(TasksService.class)) {
+                    try {
+                        //noinspection unchecked
+                        Map<UUID, RootTask> contexts = (Map<UUID, RootTask>) activeTasks.get(tasksService);
+                        assertThat(contexts).isEmpty();
+                    } catch (IllegalAccessException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+                for (TransportShardUpsertAction action : internalCluster().getInstances(TransportShardUpsertAction.class)) {
+                    try {
+                        @SuppressWarnings("unchecked")
+                        ConcurrentHashMap<TaskId, KillableCallable<?>> operations = (ConcurrentHashMap<TaskId, KillableCallable<?>>) activeOperationsSb.get(action);
+                        assertThat(operations).isEmpty();
+                    } catch (IllegalAccessException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+                for (TransportShardDeleteAction action : internalCluster().getInstances(TransportShardDeleteAction.class)) {
+                    try {
+                        @SuppressWarnings("unchecked")
+                        ConcurrentHashMap<TaskId, KillableCallable<?>> operations = (ConcurrentHashMap<TaskId, KillableCallable<?>>) activeOperationsSb.get(action);
+                        assertThat(operations).isEmpty();
+                    } catch (IllegalAccessException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+            }, 10L, TimeUnit.SECONDS);
+        } catch (AssertionError e) {
+            StringBuilder errorMessageBuilder = new StringBuilder();
+            errorMessageBuilder.append("Open jobs:\n");
+            for (var jobsLogService : internalCluster().getInstances(JobsLogService.class)) {
+                JobsLogs jobsLogs = jobsLogService.get();
+                for (var jobContent : jobsLogs.activeJobs()) {
+                    errorMessageBuilder.append(jobContent.toString()).append("\n");
+                }
+            }
+            errorMessageBuilder.append("Active tasks:\n");
+            String[] nodeNames = internalCluster().getNodeNames();
+            for (String nodeName : nodeNames) {
+                TasksService tasksService = internalCluster().getInstance(TasksService.class, nodeName);
+                try {
+                    //noinspection unchecked
+                    Map<UUID, RootTask> contexts = (Map<UUID, RootTask>) activeTasks.get(tasksService);
+                    String contextsString = contexts.toString();
+                    if (!"{}".equals(contextsString)) {
+                        errorMessageBuilder.append("## node: ");
+                        errorMessageBuilder.append(nodeName);
+                        errorMessageBuilder.append("\n");
+                        errorMessageBuilder.append(contextsString);
+                        errorMessageBuilder.append("\n");
+                    }
+                    contexts.clear();
+                } catch (IllegalAccessException ex) {
+                    throw new RuntimeException(ex);
+                }
+            }
+            throw new AssertionError(errorMessageBuilder.toString(), e);
+        }
+    }
+
+    @After
+    public void ensureNoInflightRequestsLeft() throws Exception {
+        assertBusy(() -> {
+            for (var nodeLimits : internalCluster().getInstances(NodeLimits.class)) {
+                assertThat(nodeLimits.totalNumInflight()).isEqualTo(0L);
+            }
+        });
+    }
+
+    @After
+    public void ensure_one_node_limit_instance_per_node() {
+        Iterable<NodeLimits> nodeLimitsInstances = internalCluster().getInstances(NodeLimits.class);
+        int numInstances = 0;
+        for (var nodeLimits : nodeLimitsInstances) {
+            numInstances++;
+        }
+        assertThat(numInstances)
+                .as("There must only be as many NodeLimits instances as there are nodes in the cluster")
+                .isEqualTo(internalCluster().numNodes());
+    }
+
+    public void waitUntilShardOperationsFinished() throws Exception {
+        assertBusy(() -> {
+            Iterable<IndicesService> indexServices = internalCluster().getInstances(IndicesService.class);
+            for (IndicesService indicesService : indexServices) {
+                for (IndexService indexService : indicesService) {
+                    for (IndexShard indexShard : indexService) {
+                        assertThat(indexShard.getActiveOperationsCount()).isEqualTo(0);
+                    }
+                }
+            }
+        }, 5, TimeUnit.SECONDS);
+    }
+
+    public void waitUntilThreadPoolTasksFinished(final String name) throws Exception {
+        assertBusy(() -> {
+            Iterable<ThreadPool> threadPools = internalCluster().getInstances(ThreadPool.class);
+            for (ThreadPool threadPool : threadPools) {
+                ThreadPoolExecutor executor = (ThreadPoolExecutor) threadPool.executor(name);
+                assertThat(executor.getActiveCount()).isEqualTo(0);
+            }
+        }, 5, TimeUnit.SECONDS);
+    }
+
+    /**
+     * Execute a SQL statement as system query on a specific node in the cluster
+     *
+     * @param stmt      the SQL statement
+     * @param schema    the schema that should be used for this statement
+     *                  schema is nullable, which means the default schema ("doc") is used
+     * @param node      the name of the node on which the stmt is executed
+     * @return          the SQL Response
+     */
+    public SQLResponse systemExecute(String stmt, @Nullable String schema, String node) {
+        SQLOperations sqlOperations = internalCluster().getInstance(SQLOperations.class, node);
+        UserLookup userLookup;
+        try {
+            userLookup = internalCluster().getInstance(UserLookup.class, node);
+        } catch (ConfigurationException ignored) {
+            // If enterprise is not enabled there is no UserLookup instance bound in guice
+            userLookup = () -> List.of(User.CRATE_USER);
+        }
+        try (Session session = sqlOperations.createSession(schema, userLookup.findUser("crate"))) {
+            response = sqlExecutor.exec(stmt, session);
+        }
+        return response;
+    }
+
+    /**
+     * Execute an SQL Statement on a random node of the cluster
+     *
+     * @param stmt the SQL Statement
+     * @param args the arguments to replace placeholders ("?") in the statement
+     * @return the SQLResponse
+     */
+    public SQLResponse execute(String stmt, Object[] args) {
+        try {
+            SQLResponse response = sqlExecutor.exec(new TestExecutionConfig(isJdbcEnabled(), isHashJoinEnabled()), stmt, args);
+            this.response = response;
+            return response;
+        } catch (ElasticsearchTimeoutException e) {
+            LOGGER.error("Timeout on SQL statement: {} {}", stmt, e);
+            internalCluster().dumpActiveTasks();
+            throw e;
+        }
+    }
+
+    /**
+     * Execute an SQL Statement on a random node of the cluster
+     *
+     * @param stmt    the SQL Statement
+     * @param args    the arguments of the statement
+     * @param timeout internal timeout of the statement
+     * @return the SQLResponse
+     */
+    public SQLResponse execute(String stmt, Object[] args, TimeValue timeout) {
+        try {
+            SQLResponse response = sqlExecutor.exec(new TestExecutionConfig(isJdbcEnabled(), isHashJoinEnabled()), stmt, args, timeout);
+            this.response = response;
+            return response;
+        } catch (ElasticsearchTimeoutException e) {
+            LOGGER.error("Timeout on SQL statement: {} {}", stmt, e);
+            internalCluster().dumpActiveTasks();
+            throw e;
+        }
+    }
+
+    /**
+     * Execute an SQL Statement on a random node of the cluster
+     *
+     * @param stmt    the SQL statement
+     * @param schema  the schema that should be used for this statement
+     *                schema is nullable, which means default schema ("doc") is used
+     * @return the SQLResponse
+     */
+    public SQLResponse execute(String stmt, @Nullable String schema) {
+        return execute(stmt, null, createSession(schema));
+    }
+
+    public static class PlanForNode {
+        public final Plan plan;
+        final String nodeName;
+        public final PlannerContext plannerContext;
+
+        private PlanForNode(Plan plan, String nodeName, PlannerContext plannerContext) {
+            this.plan = plan;
+            this.nodeName = nodeName;
+            this.plannerContext = plannerContext;
+        }
+    }
+
+    public PlanForNode plan(String stmt) {
+        String[] nodeNames = internalCluster().getNodeNames();
+        String nodeName = nodeNames[randomIntBetween(1, nodeNames.length) - 1];
+
+        Analyzer analyzer = internalCluster().getInstance(Analyzer.class, nodeName);
+        Planner planner = internalCluster().getInstance(Planner.class, nodeName);
+        NodeContext nodeCtx = internalCluster().getInstance(NodeContext.class, nodeName);
+
+        CoordinatorSessionSettings sessionSettings = new CoordinatorSessionSettings(
+            User.CRATE_USER,
+            sqlExecutor.getCurrentSchema()
+        );
+        CoordinatorTxnCtx coordinatorTxnCtx = new CoordinatorTxnCtx(sessionSettings);
+        RoutingProvider routingProvider = new RoutingProvider(Randomness.get().nextInt(), planner.getAwarenessAttributes());
+        PlannerContext plannerContext = new PlannerContext(
+            planner.currentClusterState(),
+            routingProvider,
+            UUID.randomUUID(),
+            coordinatorTxnCtx,
+            nodeCtx,
+            0,
+            null
+        );
+        Plan plan = planner.plan(
+            analyzer.analyze(
+                SqlParser.createStatement(stmt),
+                coordinatorTxnCtx.sessionSettings(),
+                ParamTypeHints.EMPTY),
+            plannerContext);
+        return new PlanForNode(plan, nodeName, plannerContext);
+    }
+
+    public TestingRowConsumer execute(PlanForNode planForNode) {
+        DependencyCarrier dependencyCarrier = internalCluster().getInstance(DependencyCarrier.class, planForNode.nodeName);
+        TestingRowConsumer downstream = new TestingRowConsumer();
+        planForNode.plan.execute(
+            dependencyCarrier,
+            planForNode.plannerContext,
+            downstream,
+            Row.EMPTY,
+            SubQueryResults.EMPTY
+        );
+        return downstream;
+    }
+
+    /**
+     * Execute an SQL Statement on a random node of the cluster
+     *
+     * @param stmt     the SQL Statement
+     * @param bulkArgs the bulk arguments of the statement
+     * @return the SQLResponse
+     */
+    public long[] execute(String stmt, Object[][] bulkArgs) {
+        return sqlExecutor.execBulk(stmt, bulkArgs);
+    }
+
+    /**
+     * Execute an SQL Statement on a random node of the cluster
+     *
+     * @param stmt     the SQL Statement
+     * @param bulkArgs the bulk arguments of the statement
+     * @return the SQLResponse
+     */
+    public long[] execute(String stmt, Object[][] bulkArgs, TimeValue timeout) {
+        return sqlExecutor.execBulk(stmt, bulkArgs, timeout);
+    }
+
+
+    /**
+     * Execute an SQL Statement on a random node of the cluster
+     *
+     * @param stmt the SQL Statement
+     * @return the SQLResponse
+     */
+    public SQLResponse execute(String stmt) {
+        return execute(stmt, (Object[]) null);
+    }
+
+    /**
+     * Execute an SQL Statement using a specific {@link Session}
+     * This is useful to execute a query on a specific node or to test using
+     * session options like default schema.
+     *
+     * @param stmt    the SQL Statement
+     * @param session the Session to use
+     * @return the SQLResponse
+     */
+    public SQLResponse execute(String stmt, Session session) {
+        return execute(stmt, null, session);
+    }
+
+    /**
+     * Execute an SQL Statement using a specific {@link Session}
+     * This is useful to execute a query on a specific node or to test using
+     * session options like default schema.
+     *
+     * @param stmt    the SQL Statement
+     * @param session the Session to use
+     * @return the SQLResponse
+     */
+    public SQLResponse execute(String stmt, Object[] args, Session session) {
+        var response = sqlExecutor.exec(stmt, args, session);
+        this.response = response;
+        return response;
+    }
+
+    public SQLResponse execute(String stmt, Object[] args, String node) {
+        return execute(stmt, args, node, SQLTransportExecutor.REQUEST_TIMEOUT);
+    }
+
+    public SQLResponse execute(String stmt, Object[] args, String node, TimeValue timeout) {
+        SQLOperations sqlOperations = internalCluster().getInstance(SQLOperations.class, node);
+        try (Session session = sqlOperations.createSession(sqlExecutor.getCurrentSchema(), User.CRATE_USER)) {
+            SQLResponse response = sqlExecutor.exec(stmt, args, session, timeout);
+            this.response = response;
+            return response;
+        }
+    }
+
+    /**
+     * Get all mappings from an index as JSON String
+     *
+     * @param index the name of the index
+     * @return the index mapping as String
+     * @throws IOException
+     */
+    protected String getIndexMapping(String index) throws IOException {
+        ClusterStateRequest request = new ClusterStateRequest()
+            .routingTable(false)
+            .nodes(false)
+            .metadata(true)
+            .indices(index);
+        ClusterStateResponse response = FutureUtils.get(client().admin().cluster().state(request));
+
+        Metadata metadata = response.getState().metadata();
+        XContentBuilder builder = XContentFactory.jsonBuilder().startObject();
+
+        IndexMetadata indexMetadata = metadata.iterator().next();
+        builder.field(Constants.DEFAULT_MAPPING_TYPE);
+        builder.map(indexMetadata.mapping().sourceAsMap());
+        builder.endObject();
+
+        return Strings.toString(builder);
+    }
+
+    public void waitForMappingUpdateOnAll(final RelationName relationName, final String... fieldNames) throws Exception {
+        assertBusy(() -> {
+            Iterable<Schemas> referenceInfosIterable = internalCluster().getInstances(Schemas.class);
+            for (Schemas schemas : referenceInfosIterable) {
+                TableInfo tableInfo = schemas.getTableInfo(relationName);
+                assertThat(tableInfo).isNotNull();
+                for (String fieldName : fieldNames) {
+                    ColumnIdent columnIdent = ColumnIdent.fromPath(fieldName);
+                    assertThat(tableInfo.getReference(columnIdent)).isNotNull();
+                }
+            }
+        }, 20L, TimeUnit.SECONDS);
+    }
+
+    public void assertFunctionIsCreatedOnAll(String schema, String name, List<DataType<?>> argTypes) throws Exception {
+        SearchPath searchPath = SearchPath.pathWithPGCatalogAndDoc();
+        assertBusy(() -> {
+            Iterable<Functions> functions = internalCluster().getInstances(Functions.class);
+            for (Functions function : functions) {
+                FunctionImplementation func = function.get(
+                    schema,
+                    name,
+                    Lists2.map(argTypes, t -> Literal.of(t, null)),
+                    searchPath);
+                assertThat(func).isNotNull();
+                assertThat(func.boundSignature().getArgumentDataTypes()).isEqualTo(argTypes);
+            }
+        }, 20L, TimeUnit.SECONDS);
+    }
+
+    public void assertFunctionIsDeletedOnAll(String schema, String name, List<Symbol> arguments) throws Exception {
+        assertBusy(() -> {
+            Iterable<Functions> functions = internalCluster().getInstances(Functions.class);
+            for (Functions function : functions) {
+                try {
+                    var func = function.get(schema, name, arguments, SearchPath.createSearchPathFrom(schema));
+                    if (func != null) {
+                        // if no exact function match is found for given arguments,
+                        // the function with arguments that can be casted to provided
+                        // arguments will be returned. Therefore, we have to assert that
+                        // the provided arguments do not match the arguments of the resolved
+                        // function if the function was deleted.
+                        assertThat(func.boundSignature().getArgumentDataTypes()).isNotEqualTo(Symbols.typeView(arguments));
+                    }
+                } catch (UnsupportedOperationException e) {
+                    assertThat(e.getMessage()).startsWith("Unknown function");
+                }
+
+            }
+        }, 20L, TimeUnit.SECONDS);
+    }
+
+    public void waitForMappingUpdateOnAll(final String tableOrPartition, final String... fieldNames) throws Exception {
+        waitForMappingUpdateOnAll(new RelationName(sqlExecutor.getCurrentSchema(), tableOrPartition), fieldNames);
+    }
+
+    /**
+     * Get the IndexSettings as JSON String
+     *
+     * @param index the name of the index
+     * @return the IndexSettings as JSON String
+     * @throws IOException
+     */
+    protected String getIndexSettings(String index) throws IOException {
+        ClusterStateRequest request = new ClusterStateRequest()
+            .routingTable(false)
+            .nodes(false)
+            .metadata(true)
+            .indices(index);
+        ClusterStateResponse response = FutureUtils.get(client().admin().cluster().state(request));
+
+        Metadata metadata = response.getState().metadata();
+        XContentBuilder builder = XContentFactory.jsonBuilder().startObject();
+
+        for (IndexMetadata indexMetadata : metadata) {
+            builder.startObject(indexMetadata.getIndex().getName());
+            builder.startObject("settings");
+            Settings settings = indexMetadata.getSettings();
+            for (String settingName : settings.keySet()) {
+                builder.field(settingName, settings.get(settingName));
+            }
+            builder.endObject();
+
+            builder.endObject();
+        }
+
+        builder.endObject();
+
+        return Strings.toString(builder);
+    }
+
+    /**
+     * Creates an {@link Session} on a specific node.
+     * This can be used to ensure that a request is performed on a specific node.
+     *
+     * @param nodeName The name of the node to create the session
+     * @return The created session
+     */
+    protected Session createSessionOnNode(String nodeName) {
+        SQLOperations sqlOperations = internalCluster().getInstance(SQLOperations.class, nodeName);
+        return sqlOperations.createSession(
+            sqlExecutor.getCurrentSchema(), User.CRATE_USER);
+    }
+
+    /**
+     * Creates a {@link Session} with the given default schema
+     * and an options list. This is useful if you require a session which differs
+     * from the default one.
+     *
+     * @param defaultSchema The default schema to use. Can be null.
+     * @return The created session
+     */
+    protected Session createSession(@Nullable String defaultSchema) {
+        SQLOperations sqlOperations = internalCluster().getInstance(SQLOperations.class);
+        return sqlOperations.createSession(defaultSchema, User.CRATE_USER);
+    }
+
+    /**
+     * If the Test class or method contains a @UseJdbc annotation then,
+     * based on the ratio provided, a random value of true or false is returned.
+     * For more details on the ratio see {@link UseJdbc}
+     * <p>
+     * Method annotations have higher priority than class annotations.
+     */
+    private boolean isJdbcEnabled() {
+        UseJdbc useJdbc = getTestAnnotation(UseJdbc.class);
+        if (useJdbc == null) {
+            return false;
+        }
+        return isFeatureEnabled(useJdbc.value());
+    }
+
+    /**
+     * If the Test class or method is annotated with {@link UseHashJoins} then,
+     * based on the provided ratio, a random value of true or false is returned.
+     * For more details on the ratio see {@link UseHashJoins}
+     * <p>
+     * Method annotations have higher priority than class annotations.
+     */
+    private boolean isHashJoinEnabled() {
+        UseHashJoins useHashJoins = getTestAnnotation(UseHashJoins.class);
+        if (useHashJoins == null) {
+            return false;
+        }
+        return isFeatureEnabled(useHashJoins.value());
+    }
+
+    /**
+     * Checks if the current test method or test class is annotated with the provided {@param annotationClass}
+     *
+     * @return the annotation if one is present or null otherwise
+     */
+    @Nullable
+    private <T extends Annotation> T getTestAnnotation(Class<T> annotationClass) {
+        try {
+            Class<?> clazz = this.getClass();
+            String testMethodName = testName.getMethodName();
+            String[] split = testName.getMethodName().split(" ");
+            if (split.length > 1) {
+                // When we annotate tests with @Repeat the test method name gets augmented with a seed and we won't
+                // be able to find it in the class methods, so just grab the method name.
+                testMethodName = split[0];
+            }
+
+            Method method = clazz.getMethod(testMethodName);
+            T annotation = method.getAnnotation(annotationClass);
+            if (annotation == null) {
+                annotation = clazz.getAnnotation(annotationClass);
+            }
+            return annotation;
+        } catch (NoSuchMethodException e) {
+            return null;
+        }
+    }
+
+    /**
+     * We sometimes randomize the use of features in tests.
+     * This method verifies the provided ratio and based on it and a random number
+     * indicates if a feature should be enabled or not.
+     *
+     * @param ratio a number between [0, 1] that indicates a "randomness factor"
+     *              (1 = always enabled, 0 = always disabled)
+     *
+     * @return true if a feature should be active/used and false otherwise
+     */
+    private boolean isFeatureEnabled(double ratio) {
+        if (ratio == 0) {
+            return false;
+        }
+
+        assert ratio >= 0.0 && ratio <= 1.0;
+        return ratio == 1 || RandomizedContext.current().getRandom().nextDouble() < ratio;
+    }
+
+
+    /**
+     * If the Test class or method contains a @UseRandomizedSchema annotation then,
+     * based on the schema argument, a random (unquoted) schema name is returned. The schema name consists
+     * of a 1-20 character long ASCII string.
+     * For more details on the schema parameter see {@link UseRandomizedSchema}
+     * <p>
+     * Method annotations have higher priority than class annotations.
+     */
+    private String randomizedSchema() {
+        UseRandomizedSchema annotation = getTestAnnotation(UseRandomizedSchema.class);
+        if (annotation == null || annotation.random() == false) {
+            return Schemas.DOC_SCHEMA_NAME;
+        }
+
+        Random random = RandomizedContext.current().getRandom();
+        while (true) {
+            String schemaName = RandomStrings.randomAsciiLettersOfLengthBetween(random, 1, 20).toLowerCase();
+            if (!Schemas.READ_ONLY_SYSTEM_SCHEMAS.contains(schemaName) &&
+                !Identifiers.isKeyWord(schemaName) &&
+                !containsExtendedAsciiChars(schemaName)) {
+                return schemaName;
+            }
+        }
+    }
+
+    private boolean containsExtendedAsciiChars(String value) {
+        for (char c : value.toCharArray()) {
+            if ((short) c > 127) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    public static Index resolveIndex(String index) {
+        ClusterService clusterService = internalCluster().getInstance(ClusterService.class);
+        IndexMetadata indexMetadata = clusterService.state().metadata().index(index);
+        return new Index(index, indexMetadata.getIndexUUID());
     }
 }
